--- a/guessing-game.html
+++ b/guessing-game.html
@@ -21,7 +21,7 @@
 <div class="game">
 <form>
 <label for="number">Guess my number...</label>
-<input type="text" >
+<input type="text" id="input">
 <input type="submit" value="Submit" id="number">
 </form>
 <div class="buttons">
@@ -29,6 +29,8 @@
 <button type="button">Hint, please!</button>
 </div>
 </div>
+<script type="text/javascript" src="jquery-1.12.2.min.js"></script>
+<script type="text/javascript" src="guessingGame.js"></script>
 </body>
 
 </html>
