--- a/guessing-game.html
+++ b/guessing-game.html
@@ -7,28 +7,33 @@
 </head>
 
 <body>
+
 <div>
 <h1>The Guessing Game</h1>
 <img src="http://images.clipartpanda.com/animated-question-mark-for-powerpoint-1256186461796715642question-mark-icon.svg.hi.png">
 </div>
+
 <h2>The Rules:</h2>
+
 <ul>
 <li>Guess a number between 1-100</li>
 <li>I'll let you know if you're hot or cold based on how close you are to my number</li>
 <li>Then you guess again...</li>
 <li>You'll get 5 guesses</li>
 </ul>
-<div class="game">
-<form>
+
+
 <label for="number">Guess my number...</label>
 <input type="text" id="input">
-<input type="submit" value="Submit" id="number">
-</form>
+<button type="button" id="number">Submit</button>
+
+
 <div class="buttons">
-<button type="button">Play again!</button>
-<button type="button">Hint, please!</button>
+<button type="button" id="playAgain">Play again!</button>
+<button type="button" id="hint">Hint, please!</button>
 </div>
-</div>
+
+
 <script type="text/javascript" src="jquery-1.12.2.min.js"></script>
 <script type="text/javascript" src="guessingGame.js"></script>
 </body>
